# testpkg

doi_manage/: pyproject.toml
doi_manage/src/doi_manage/: doi_manage.py  settings.txt
doi_manager/: README.md  pyproject.toml  settings.txt
doi_manager/src/doi_manage/: doi_manage.py  local_settings.py
dset_waf/: pyproject.toml
dset_waf/src/dset_waf/: dset_waf.py
dsgen/: pyproject.toml
dsgen/src/dsgen/: dsgen.py  utils.py
libpkg/: pyproject.toml
libpkg/src/libpkg/: dbutils.py  doi_manage.py  doi_manage_settings.py  geospatial.py  gridpoints.py  gridutils.py  metautils.py  polargrids.py  strutils.py  unixutils.py  xmlutils.py
libpkg/src/libpkg/metaformats/: datacite4.py  datacite_4.py  dublin_core.py  fgdc.py  gcmd_dif.py  iso_19115_3.py  iso_19139.py  json_ld.py  native.py  settings.py  thredds.py
python/testpkg2/: pyproject.toml
python/testpkg2/src/testpkg2/: hello_world.py
testpkg1/: pyproject.toml
testpkg1/src/testpkg1/: hello_world.py
