[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dset_waf"
version = "1.0.18"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
dset_waf = "dset_waf.dset_waf:main"
