[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsgen"
version = "1.3.2"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
dsgen = "dsgen.dsgen:main"
