[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libpkg"
version = "1.2.2"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]
